--- a/code/device/barter2/app/src/main/AndroidManifest.xml
+++ b/code/device/barter2/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
         </activity>
         <activity android:name=".ui.EditMyPostActivity" >
         </activity>
-        <activity android:name=".ui.SignupActivity" >
+        <activity android:name=".ui.SignUpActivity" >
         </activity>
         <activity android:name=".ui.SearchResultActivity" >
         </activity>
