Add Xinghao change on HomePageActivity and DetailActivity
Add Xinghao change on HomePageActivity and DetailActivity

--- a/code/device/barter2/app/src/main/AndroidManifest.xml
+++ b/code/device/barter2/app/src/main/AndroidManifest.xml
@@ -32,7 +32,14 @@
         </activity>
         <activity android:name=".ui.MyPostActivity" >
         </activity>
-        <activity android:name=".ui.DetailActivity" >
+        <activity
+            android:name=".ui.DetailActivity" >
+            <intent-filter>
+
+                <action android:name="jsphdev.cmu.barter2.ui.DetailActivity" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
         <activity android:name=".ui.EditMyPostActivity" >
         </activity>
